--- a/c_team/app/views/shared/_header.html.erb
+++ b/c_team/app/views/shared/_header.html.erb
@@ -3,9 +3,11 @@
   <ul class="nav navbar-nav">
     <li><%= link_to 'ステージ', title_path %></li>
     <% if current_user %>
-    <li><%= link_to current_user.name + 'さん', edit_user_path(current_user) %></li>
-    <li><%= link_to '管理画面', :admin_root if current_user.try(:administrator?) %></li>
-    <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+      <li><%= link_to current_user.name + 'さん', edit_user_path(current_user) %></li>
+      <li><%= link_to '管理画面', :admin_root if current_user.try(:administrator?) %></li>
+      <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+    <% else %>
+      <li><%= link_to 'ログイン', login_form_path %></li>
     <% end %>
   </ul>
 </div>
