--- a/c_team/app/views/users/new.html.erb
+++ b/c_team/app/views/users/new.html.erb
@@ -1,12 +1,11 @@
-<% @page_title = 'Sing up' %>
+<% @page_title = 'アカウント登録' %>
 
 <div class="col-md-6 col-md-offset-3">
   <h1>アカウントの作成</h1>
   <%= render 'shared/errors', obj: @user %>
 
-  <%= form_for(@user) do |f| %>
+  <%= form_for @user do |f| %>
     <%= render 'form', f: f %>
-
-    <%= f.submit 'アカウントを作成する', class: 'btn btn-primary'%>
+      <%= f.submit 'アカウントを作成する', class: 'btn btn-primary'%>
   <% end %>
 </div>
