--- a/c_team/app/views/stages/title.html.erb
+++ b/c_team/app/views/stages/title.html.erb
@@ -1,7 +1,7 @@
-<% @page_title = '小豆ちゃんのお見舞い' %>
+<% @page_title = 'あずきのおみまい' %>
 
 <% content_for :stage_header do %>
-  <p id="story">小豆ちゃんのお見舞い</p>
+  <p id="story">あずきのおみまい</p>
 <% end %>
 
 <div id="motion">
