--- a/c_team/app/views/layouts/admin/application.html.erb
+++ b/c_team/app/views/layouts/admin/application.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <%= favicon_link_tag 'favicon.png', :rel => 'shortcut icon' %>
   </head>
   <body>
     <!-- ヘッダ -->
