--- a/c_team/app/assets/stylesheets/application.scss
+++ b/c_team/app/assets/stylesheets/application.scss
@@ -53,190 +53,5 @@ footer {
     }
 }
 
-// ステージUI
-// html,
-// body {
-//     overflow: hidden;
-// }
-
-.stagewrapper {
-  overflow: hidden;
-}
-
-h3 {
-    width: 100%;
-    text-align: center;
-    margin-top: 5px;
-    padding: 5px 0px;
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
-}
-
-#head {
-    background: #FFFFFF;
-    border: 2px solid #aaaaaa;
-    height: 10vh;
-}
-
-#logo {
-    height: 99%;
-    margin-left: 2px;
-    margin-right: 20px;
-    float: left;
-}
-
-#link {
-    height: 99%;
-    margin: auto 10px;
-    float: right;
-    width: 200px;
-}
-
-#mis {
-    height: 40%;
-    color: #000;
-    background: #ffffff;
-    font-size: 1.2em;
-    font-weight: 100;
-    width: 400px;
-    display: flex;
-    align-items: center;
-    margin: 5px 10px;
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
-    padding-left: 20px;
-}
-
-#story {
-    height: 40%;
-    color: #FFF;
-    font-size: 1.4em;
-    font-weight: 100;
-    background: #ff0000;
-    width: 250px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    margin: 7px 10px;
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
-}
-
-#motion {
-    border: 2px solid #aaaaaa;
-    border-top: none;
-    border-bottom: none;
-    width: 15%;
-    height: 90vh;
-    float: left;
-}
-
-#motion-pic {
-    width: inherit;
-}
-
-#enchant-stage {
-    width: 85%;
-    height: 90vh;
-    float: left;
-}
-
-#puzz {
-    width: 100%;
-    height: 50vh;
-    border-bottom: 1px solid #aaaaaa;
-}
-
-#help {
-    width: 100%;
-    height: 40vh;
-}
-
-.balloon {
-    font-size: 14px;
-    font-weight: bold;
-    width: 90%;
-    margin: 5px auto;
-    position: relative;
-    padding: 20px;
-    background: #dddddd;
-    border-radius: 10px;
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
-}
-
-.balloon::before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 0;
-    height: 0;
-    left: 20px;
-    bottom: -15px;
-    border-top: 15px solid #dddddd;
-    border-right: 15px solid transparent;
-    border-left: 15px solid transparent;
-}
-
-body {
-    background-color: #FFF;
-}
-
-$btn-color: #00e1ff;
-
-header {
-    display: flex;
-    height: 350px;
-    overflow: hidden; // background-color: $header-color;
-    background-image: image-url("header.png");
-    text-align: center;
-    border-bottom: 2px solid $btn-color;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 0;
-    &.v-bottom {
-        height: 150px;
-        margin-bottom: 10px;
-        align-items: flex-end;
-    }
-
-    & .title-b {
-      background-color: #FFF;
-      border-radius: 10px;
-      padding: 20px;
-    }
-}
-
-.start_btn {
-    width: 150px;
-    height: 150px;
-    background: #FFF;
-    border: 5px solid $btn-color;
-    border-radius: 50%;
-    color: $btn-color;
-    display: block;
-    text-align: center;
-    padding: 35px 15px;
-    font-weight: bold;
-    font-size: 160%;
-    transition: background-color 0.5s linear;
-    position: absolute;
-    right: 100px;
-    top: 150px;
-    &:hover {
-        background-color: $btn-color;
-        color: #FFF;
-        border-color: #FFF;
-        text-decoration: none;
-    }
-}
-
-p {
-  font-size: 18px;
-}
-
-.content {
-  width: 1000px;
-  margin: auto;
-}
-
-footer {
-  text-align: center;
-}
+@import 'top';
+@import 'stages';
