--- a/c_team/app/views/stages/stage2.html.erb
+++ b/c_team/app/views/stages/stage2.html.erb
@@ -8,6 +8,7 @@
 <div id="motion">
   <div id="puzz">
     <h3>〜動き方〜</h3>
+    <%= image_tag('motion03.png', id: 'motion-pic') %>
   </div>
   <div id="help">
     <h3>〜ヘルプ〜</h3>
