--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -12,7 +12,11 @@
   </div>
   <div id="help">
     <h3>〜ヘルプ〜</h3>
-    <div class="balloon">ここはこうするとええのよ</div>
+    <div class="balloon" onclick="help_button()">
+      <p id="help_text_before">ここをクリックしたら「ヘルプ」が表示されるよ！</p>
+      <p id="help_text_after" style="display: none"></p>
+    </div>
+    <%= image_tag('favicon.png', id: 'help-pic') %>
   </div>
 </div>
 
