--- a/c_team/app/views/stages/tutorial3.html.erb
+++ b/c_team/app/views/stages/tutorial3.html.erb
@@ -14,7 +14,7 @@
     <h3>〜ヘルプ〜</h3>
     <div class="balloon" onclick="help_button()">
       <p id="help_text_before">ここをクリックしたら「ヘルプ」が表示されるよ！</p>
-      <p id="help_text_after", style="display: none">どこにカラーコーンを置けば最小歩数で移動できるかな</p>
+      <p id="help_text_after" style="display: none">どこにカラーコーンを置けば最小歩数で移動できるかな</p>
     </div>
     <%= image_tag('favicon.png', id: 'help-pic') %>
   </div>
